media query para telas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login Persinalizada</title>
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/media-query.css">
 </head>
 <body>
     <main>
@@ -12,7 +13,7 @@
             <div id="imagem">
                <!--Imagens na CSS-->
             </div>
-            <div id="formu">
+            <div id="form">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configutações no seu ambiente</p>
                 <form action="login.php" method="post">
