--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de login Persinalizada</title>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,100,1,200" rel="stylesheet" />    
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/media-query.css">
 </head>
 <body>
     <main>
+
         <section id="login">
 
             <div id="imagem">
@@ -26,7 +27,7 @@
                     <div class="campo">
 
                         <span class="material-symbols-outlined">person</span>
-                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
 
                     </div>
@@ -48,6 +49,7 @@
             </div>
 
         </section>
+        
     </main>
 </body>
 </html>
