--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="form">
 
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configutações no seu ambiente</p>
+                <p>Seja bem-vindo(a) novamente. Faça o login para acessar sua conta e poder fazer as configurações no seu ambiente!</p>
 
                 <form action="login.php" method="post" autocomplete="on">
 
